# event_generation

./: .gitignore  CMakeLists.txt  FindPythia8.cmake  LICENSE  plot.py
python/: plot.py
src/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt
